Complete the update part of the Member
